src/validation/tests/snapshots/rusty__validation__tests__duplicates_validation_test__duplicate_action_should_be_a_problem.snap
---
source: src/validation/tests/duplicates_validation_test.rs
expression: "&diagnostics"
---
error[E004]: prg.foo: Ambiguous callable symbol.
   ┌─ <internal>:9:20
   │
 9 │             ACTION foo
   │                    ^^^ prg.foo: Ambiguous callable symbol.
   ·
17 │             ACTION foo
   │                    --- see also

error[E004]: prg.foo: Ambiguous callable symbol.
   ┌─ <internal>:17:20
   │
 9 │             ACTION foo
   │                    --- see also
   ·
17 │             ACTION foo
   │                    ^^^ prg.foo: Ambiguous callable symbol.
